vlib/v/checker/tests/map_builtin_method_args_err.out
vlib/v/checker/tests/map_builtin_method_args_err.vv:6:16: error: `.clone()` does not have any arguments
    4 |     }
    5 | 
    6 |     a1 := m.clone(11)
      |                   ~~
    7 |     println(a1)
    8 |
vlib/v/checker/tests/map_builtin_method_args_err.vv:9:15: error: `.move()` does not have any arguments
    7 |     println(a1)
    8 | 
    9 |     a2 := m.move(11)
      |                  ~~
   10 |     println(a2)
   11 |
vlib/v/checker/tests/map_builtin_method_args_err.vv:12:15: error: `.keys()` does not have any arguments
   10 |     println(a2)
   11 | 
   12 |     a3 := m.keys('aaa')
      |                  ~~~~~
   13 |     println(a3)
   14 | }
